---
source: packages/exec/src/deps/lib_sce_gnm_driver/translate/mod.rs
expression: shader.displayed()
---
0x0000: s_mov_b32 vcc_hi, 0xf
0x0008: s_mov_b64 s[0:1], exec_lo
0x000c: s_wqm_b64 exec_lo, exec_lo
0x0010: s_mov_b32 m0, s16
0x0014: v_interp_p1_f32 v2, v0, attr1.x
0x0018: v_interp_p2_f32 v2, v1, attr1.x
0x001c: v_interp_p1_f32 v3, v0, attr1.y
0x0020: v_interp_p2_f32 v3, v1, attr1.y
0x0024: image_sample v2, v[2:3], s[4:11], s[12:15], dmask(a)
0x002c: v_interp_p1_f32 v3, v0, attr0.w
0x0030: v_interp_p2_f32 v3, v1, attr0.w
0x0034: s_waitcnt 0xf70
0x0038: v_mul_f32 v2, v2, v3
0x003c: v_interp_p1_f32 v3, v0, attr0.x
0x0040: v_interp_p2_f32 v3, v1, attr0.x
0x0044: v_interp_p1_f32 v4, v0, attr0.y
0x0048: v_interp_p2_f32 v4, v1, attr0.y
0x004c: v_interp_p1_f32 v0, v0, attr0.z
0x0050: v_interp_p2_f32 v0, v1, attr0.z
0x0054: s_mov_b64 exec_lo, s[0:1]
0x0058: v_cvt_pkrtz_f16_f32 v1, v3, v4
0x005c: v_cvt_pkrtz_f16_f32 v0, v0, v2
0x0060: exp mrt_color0, v1, v0, off, off, compress, done, vm
0x0068: s_endpgm 0x0
